# DeepTadarDataCollect

./: .gitignore  Aligner.py  MSC1_corresponding_points.py  MSC2_calc_transform_params.py  Makefile  README.md  README1.md  TODO  TODO.temp.md  bag2img.sh  bag2pcd.sh  calib.py  calib_results.txt  cleanpointcloud.sh  config.yaml  data_collection.py  dep.npy  depth.npy  depth_layer_sep_calib.py  example.py  fine_tune_edge_detection.ipynb  image.yaml  mock_data_prepare.py  note.txt  ori.npy  realsense_test.py  recov.npy  requirements.txt  rotate.py  seekRTS.yaml  select_points_for_calib.py  select_points_for_calib_and_writeback.py  setup.sh  startup.sh  test_usb.py  thermal.npy  thermal_images_depth_align.py  trans.npy  transform_batch.py  videostream.py  (+7 more)
calib/: extrinsic.txt  extrinsic1.txt  extrinsic_test.txt
calibpoints/: MLX.yaml  senxor_m08.yaml  senxor_m08_1.yaml
image_lidar_align/: croppointcloud.py  imagelidaraligner.py  imageprocessor.py  test.py  tyest.py
senxor/: mi48.py
src/dart_lidar_image_utils/: CMakeLists.txt  package.xml  setup.py
src/dart_lidar_image_utils/launch/: bagImage.launch
src/dart_lidar_image_utils/src/dart_lidar_image_utils/: __init__.py  imagelidaraligner.py  imageprocessor.py
src/lidar_image_align/: CMakeLists.txt  package.xml  setup.py
src/lidar_image_align/calib/: calib.yaml
src/lidar_image_align/launch/: actual.launch  display_lidar_points.rviz
src/lidar_image_align/scripts/: listener.py  listener_nolidar.py  talker.py
testing_data/: test.py
unused/: Makefile  data_collection copy.py  depth_layer_sep_calib.py  test.py  (+3 more)
(+1097 files in other folders)
